# evals-visualization

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
examples/: alf_faq_eval.jsonl  alf_rag_eval.jsonl
