[tool.poetry]
name = "evals-compare"
version = "0.1.0"
description = ""
authors = ["Jake <jake@channel.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
plotly = "^5.24.1"
streamlit-plotly-events = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
